--- a/Travel-Guide/src/test/resources/application.properties
+++ b/Travel-Guide/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/travelguide
-spring.datasource.username=root
-spring.datasource.password=Admin
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.river-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
